force-app/main/default/objects/Contact/fields/Active_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Active_Campaign_ID__c</fullName>
    <label>Active Campaign ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>