force-app/main/default/objects/Contact/fields/CE_Credits__c.field-meta.xml
<CustomField>
    <fullName>CE_Credits__c</fullName>
    <label>CE Credits</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>