force-app/main/default/objects/Contact/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <inlineHelpText>Select membership(s) an individual has</inlineHelpText>
    <label>Membership</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veterinary</fullName>
            </value>
            <value>
                <fullName>Animal Trainer</fullName>
            </value>
            <value>
                <fullName>Groomer</fullName>
            </value>
            <value>
                <fullName>Pet Sitter</fullName>
            </value>
            <value>
                <fullName>Boarding &amp; Daycare</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>