force-app/main/default/objects/Contact/fields/No_Business__c.field-meta.xml
<CustomField>
    <fullName>No_Business__c</fullName>
    <formula>IF(ISBLANK(Account.Business__c) = TRUE, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Business</label>
    <type>Checkbox</type>
</CustomField>