force-app/main/default/objects/Contact/fields/onemergefree__EmailUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__EmailUpdateDate__c</fullName>
    <description>Timestamp of the latest update to the Email.</description>
    <inlineHelpText>Timestamp of the latest update to the Email.</inlineHelpText>
    <label>Email Update Date</label>
    <type>DateTime</type>
</CustomField>