force-app/main/default/objects/Contact/fields/onemergefree__MailingAddressUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MailingAddressUpdateDate__c</fullName>
    <description>Timestamp of the latest update to the Mailing Address.</description>
    <inlineHelpText>Timestamp of the latest update to the Mailing Address.</inlineHelpText>
    <label>Mailing Address Update Date</label>
    <type>DateTime</type>
</CustomField>