force-app/main/default/objects/Contact/fields/onemergefree__MobileUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__MobileUpdateDate__c</fullName>
    <description>Timestamp of the latest update to the Mobile.</description>
    <inlineHelpText>Timestamp of the latest update to the Mobile.</inlineHelpText>
    <label>Mobile Update Date</label>
    <type>DateTime</type>
</CustomField>