force-app/main/default/objects/Contact/fields/onemergefree__NameUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__NameUpdateDate__c</fullName>
    <description>Timestamp of the latest update to the Lead Name.</description>
    <inlineHelpText>Timestamp of the latest update to the Lead Name.</inlineHelpText>
    <label>Contact Name Update Date</label>
    <type>DateTime</type>
</CustomField>