force-app/main/default/objects/Contact/fields/onemergefree__OtherAddressUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>onemergefree__OtherAddressUpdateDate__c</fullName>
    <description>Timestamp of the latest update to the Other Address.</description>
    <inlineHelpText>Timestamp of the latest update to the Ogther Address.</inlineHelpText>
    <label>Other Address Update Date</label>
    <type>DateTime</type>
</CustomField>