force-app/main/default/objects/Contact/fields/Pending_Invite__c.field-meta.xml
<CustomField>
    <fullName>Pending_Invite__c</fullName>
    <formula>IF(Account.Pending_Business__c = &quot;&quot;, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Invite</label>
    <type>Checkbox</type>
</CustomField>