force-app/main/default/objects/Contact/fields/PracticeName__c.field-meta.xml
<CustomField>
    <fullName>PracticeName__c</fullName>
    <label>PracticeName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>