force-app/main/default/objects/Contact/fields/Stripe_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Id__c</fullName>
    <label>(Deprecated) Stripe Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>