force-app/main/default/objects/Contact/fields/SX_Above_Unit_Lookup__c.field-meta.xml
<CustomField>
    <fullName>SX_Above_Unit_Lookup__c</fullName>
    <formula>IF( ISBLANK( SX_User_Id__c ),&quot;&quot;, Account.SX_Above_Unit_Lookup__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SX Above Unit Lookup</label>
    <type>Text</type>
</CustomField>