force-app/main/default/objects/Contact/fields/SX_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>SX_Activation_Date__c</fullName>
    <formula>SX_LMS_User__r.SX_Activation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SX Activation Date</label>
    <type>Date</type>
</CustomField>