force-app/main/default/objects/Contact/fields/SX_Active_User__c.field-meta.xml
<CustomField>
    <fullName>SX_Active_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SX Active User</label>
    <type>Checkbox</type>
</CustomField>