force-app/main/default/objects/Contact/fields/SX_Completed_Course_Count_Contact__c.field-meta.xml
<CustomField>
    <fullName>SX_Completed_Course_Count_Contact__c</fullName>
    <formula>SX_LMS_User__r.SX_Completed_Course_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SX Completed Course Count (Contact)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>