force-app/main/default/objects/Contact/fields/SX_Course_Completion_Rate_Contact__c.field-meta.xml
<CustomField>
    <fullName>SX_Course_Completion_Rate_Contact__c</fullName>
    <formula>SX_LMS_User__r.SX_Course_Completion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SX Course Completion Rate (Contact)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>