force-app/main/default/objects/Contact/fields/SX_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>SX_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SX Enrollment</label>
    <referenceTo>SX_Enrollment__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>