force-app/main/default/objects/Contact/fields/SX_Enrollment_Count_Contact__c.field-meta.xml
<CustomField>
    <fullName>SX_Enrollment_Count_Contact__c</fullName>
    <formula>SX_LMS_User__r.SX_Enrollment_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SX Enrollment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>