force-app/main/default/objects/Contact/fields/SX_Job_Lookup__c.field-meta.xml
<CustomField>
    <fullName>SX_Job_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SX Job Lookup</label>
    <referenceTo>SX_Job__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>