force-app/main/default/objects/Contact/fields/SX_LMS_User__c.field-meta.xml
<CustomField>
    <fullName>SX_LMS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SX LMS User</label>
    <referenceTo>SX_LMS_User__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>