force-app/main/default/objects/Contact/fields/SX_User_Id__c.field-meta.xml
<CustomField>
    <fullName>SX_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>SX User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>