force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>SX_Active_User__c</columns>
    <columns>SX_LMS_User__c</columns>
    <columns>SX_User_Id__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.IS_PERSON_ACCOUNT</columns>
    <columns>ACCOUNT.ACCOUNT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>